--- a/test.html
+++ b/test.html
@@ -3,3 +3,13 @@ layout: default
 ---
 
 <h1>test</h1>
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/FhaZdvihiUs"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
