--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@ layout: default
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/FhaZdvihiUs"
+  src="https://www.youtube.com/embed/XKaMUm7YwZc"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
